dataset1235/2025-2/2868285114/users/1760111885/executions/3792430146_254684124.log
== SUBMISSION (2025-09-02 22:32:22)
-- CODE: 
idade = int(input())

if(idade >= 18):
print("Maior_de_Idade")

else:
print("Meno_de_Idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:36:16)
-- CODE: 
idade = int(input())

print(idade)
if(idade >= 18):

print("Maior_de_Idade")

else:

print("Menor_de_Idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:36:15)
-- CODE: 
idade = int(input())

print(idade)
if(idade >= 18):

print("Maior_de_Idade")

else:

print("Menor_de_Idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:32:21)
-- CODE: 
idade = int(input())

if(idade >= 18):
print("Maior_de_Idade")

else:
print("Meno_de_Idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:40:55)
-- CODE: 
idade = int(input())
print(idade)
if (idade >= 18):
 print("Maior_de_idade")

else:
 print("Menor_de_idade")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:32:35)
-- CODE: 
idade = int(input())

if(idade >= 18):
    print("Maior_de_Idade")

else:
print("Meno_de_Idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 7
    print("Meno_de_Idade")
    ^
IndentationError: expected an indented block after 'else' statement on line 6
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 7
    print("Meno_de_Idade")
    ^
IndentationError: expected an indented block after 'else' statement on line 6
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 7
    print("Meno_de_Idade")
    ^
IndentationError: expected an indented block after 'else' statement on line 6
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 7
    print("Meno_de_Idade")
    ^
IndentationError: expected an indented block after 'else' statement on line 6
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 7
    print("Meno_de_Idade")
    ^
IndentationError: expected an indented block after 'else' statement on line 6
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 7
    print("Meno_de_Idade")
    ^
IndentationError: expected an indented block after 'else' statement on line 6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:36:57)
-- CODE: 
idade = int(input())

print("idade:", idade)
if(idade >= 18):

print("Maior_de_Idade")

else:

print("Menor_de_Idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:34:54)
-- CODE: 
idade = int(input())

if print(idade >= 18):
  
print("Maior_de_Idade")

else:

print("Meno_de_Idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 5
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 5
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:36:58)
-- CODE: 
idade = int(input())

print("idade:", idade)
if(idade >= 18):

print("Maior_de_Idade")

else:

print("Menor_de_Idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:31:49)
-- CODE: 
idade = int(input())

if(idade >= 18)
print("Maior_de_Idade")

else(idade < 18):
print("Meno_de_Idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if(idade >= 18)
                   ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 3
    if(idade >= 18)
                   ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 3
    if(idade >= 18)
                   ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if(idade >= 18)
                   ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if(idade >= 18)
                   ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if(idade >= 18)
                   ^
SyntaxError: expected ':'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:31:45)
-- CODE: 
idade = int(input())

if(idade >= 18)
print("Maior_de_Idade")

else(idade < 18):
print("Meno_de_Idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if(idade >= 18)
                   ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 3
    if(idade >= 18)
                   ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 3
    if(idade >= 18)
                   ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if(idade >= 18)
                   ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if(idade >= 18)
                   ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if(idade >= 18)
                   ^
SyntaxError: expected ':'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:34:55)
-- CODE: 
idade = int(input())

if print(idade >= 18):
  
print("Maior_de_Idade")

else:

print("Meno_de_Idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 5
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 5
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    print("Maior_de_Idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:36:00)
-- CODE: 
idade = int(input())

print(idade)
if(idade >= 18)  

print("Maior_de_Idade")

else:

print("Menor_de_Idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if(idade >= 18)  
                     ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    if(idade >= 18)  
                     ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    if(idade >= 18)  
                     ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if(idade >= 18)  
                     ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if(idade >= 18)  
                     ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if(idade >= 18)  
                     ^
SyntaxError: expected ':'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:40:46)
-- CODE: 
idade = int(input())
print(idade)
if (idade >= 18):
print("Maior_de_idade")

else:
print("Menor_de_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:40:17)
-- CODE: 
idade = int(input())

print(idade)
if(idade >= 18):
print("Maior_de_idade")

else:
print("Menor_de_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 5
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 5
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:40:18)
-- CODE: 
idade = int(input())

print(idade)
if(idade >= 18):
print("Maior_de_idade")

else:
print("Menor_de_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 5
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 5
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:35:58)
-- CODE: 
idade = int(input())

print(idade)
if(idade >= 18)  

print("Maior_de_Idade")

else:

print("Menor_de_Idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if(idade >= 18)  
                     ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    if(idade >= 18)  
                     ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    if(idade >= 18)  
                     ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if(idade >= 18)  
                     ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if(idade >= 18)  
                     ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if(idade >= 18)  
                     ^
SyntaxError: expected ':'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:40:35)
-- CODE: 
idade = int(input())
print(idade)
if(idade >= 18):
print("Maior_de_idade")

else:
print("Menor_de_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
